--- a/app/src/main/res/layout/activity_a_review_page_clicked.xml
+++ b/app/src/main/res/layout/activity_a_review_page_clicked.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="작성자 : "
             app:layout_constraintEnd_toStartOf="@+id/TV_userNameReview"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/TV_userNameReview"
@@ -26,7 +26,7 @@
             android:layout_marginEnd="10dp"
             android:text="최정훈"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
             android:id="@+id/IV_imageReview"
@@ -39,7 +39,7 @@
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/글귀_제목"
@@ -51,9 +51,8 @@
             android:text="제목 :"
             android:textSize="20sp"
             android:textStyle="bold"
-
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/IV_imageReview" />
+            app:layout_constraintTop_toBottomOf="@id/IV_imageReview"/>
 
         <TextView
             android:id="@+id/TV_titleReview"
@@ -66,7 +65,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/글귀_제목"
             app:layout_constraintLeft_toRightOf="@id/글귀_제목"
-            app:layout_constraintTop_toTopOf="@id/글귀_제목" />
+            app:layout_constraintTop_toTopOf="@id/글귀_제목"/>
 
 
         <TextView
@@ -79,7 +78,7 @@
             android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/글귀_제목" />
+            app:layout_constraintTop_toBottomOf="@id/글귀_제목"/>
 
 
         <ImageView
@@ -90,7 +89,7 @@
             android:background="@color/colordarkgray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/TV_writingReview" />
+            app:layout_constraintTop_toBottomOf="@id/TV_writingReview"/>
 
         <TextView
             android:id="@+id/글귀댓글"
@@ -104,7 +103,7 @@
             app:layout_constraintBottom_toTopOf="@id/댓글윗선"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/경계선" />
+            app:layout_constraintTop_toBottomOf="@id/경계선"/>
 
         <ImageView
             android:id="@+id/댓글윗선"
@@ -114,16 +113,15 @@
             android:background="@color/colordarkgray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/글귀댓글" />
+            app:layout_constraintTop_toBottomOf="@id/글귀댓글"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RC_Review"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="300dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/댓글윗선"
-            />
+            app:layout_constraintTop_toBottomOf="@id/댓글윗선"/>
 
         <ImageView
             android:id="@+id/댓글아랫선"
@@ -132,7 +130,7 @@
             android:background="@color/colordarkgray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/RC_Review" />
+            app:layout_constraintTop_toBottomOf="@id/RC_Review"/>
 
         <EditText
             android:id="@+id/ET_댓글"
@@ -158,8 +156,7 @@
             android:textSize="13sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/댓글아랫선"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
