--- a/app/src/main/res/layout/activity_a_main_page.xml
+++ b/app/src/main/res/layout/activity_a_main_page.xml
@@ -125,19 +125,141 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+
             android:text="상 품 목 록"
             android:textSize="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/BT_매거진" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/BT_매거진"
+            app:layout_constraintBottom_toTopOf="@id/카테고리선"
+            />
+
+        <Button
+            android:id="@+id/BT_가격높은순"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:background="@android:color/transparent"
+            android:text="가격높은순"
+            android:textSize="10sp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/카테고리선"
+            />
+
+        <Button
+            android:id="@+id/BT_가격낮은순"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:textSize="10sp"
+            android:text="가격낮은순"
+            android:background="@android:color/transparent"
+            app:layout_constraintRight_toLeftOf="@id/BT_가격높은순"
+            app:layout_constraintBottom_toBottomOf="@id/BT_가격높은순"
+            />
+
+        <Button
+            android:id="@+id/BT_상품평순"
+            android:layout_width="50dp"
+            android:layout_height="30dp"
+            android:text="Best"
+            android:textSize="10sp"
+            android:background="@android:color/transparent"
+            app:layout_constraintRight_toLeftOf="@id/BT_가격낮은순"
+            app:layout_constraintBottom_toBottomOf="@id/BT_가격낮은순"
+            />
+
+        <ImageView
+            android:id="@+id/카테고리선"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/colordarkgray"
+            app:layout_constraintTop_toBottomOf="@id/상품목록"
+            />
+
+        <HorizontalScrollView
+            android:id="@+id/품목"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/카테고리선"
+            app:layout_constraintBottom_toTopOf="@+id/선"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:scrollbars="none"
+            android:orientation="horizontal"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/BT_전체"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전체"
+                    android:layout_gravity="center"
+                    />
+
+                <Button
+                    android:id="@+id/BT_채소"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:text="채소" />
+
+                <Button
+                    android:id="@+id/BT_육류"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="육류"
+                    />
+                <Button
+                    android:id="@+id/BT_생선"
+                    android:text="생선"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <Button
+                    android:id="@+id/BT_과일"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="과일" />
+
+                <Button
+                    android:id="@+id/BT_쌀잡곡"
+                    android:text="쌀/잡곡"
+                    android:layout_gravity="center"
+                    android:background="@android:color/transparent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:id="@+id/BT_수산건어물"
+                    android:text="수산/건어물"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
+
+
+        </HorizontalScrollView>
+
+
+
 
         <ImageView
             android:id="@+id/선"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="30dp"
             android:background="@color/colordarkgray"
-            app:layout_constraintTop_toBottomOf="@id/상품목록" />
+            app:layout_constraintTop_toBottomOf="@id/카테고리선" />
 
         <ProgressBar
             android:id="@+id/progressbar_circle_a_main"
