--- a/app/src/main/res/layout/activity_a_payment_page.xml
+++ b/app/src/main/res/layout/activity_a_payment_page.xml
@@ -187,7 +187,7 @@
                     <ImageView
                         android:id="@+id/food_item_image"
                         android:layout_width="175dp"
-                        android:layout_height="173dp"
+                        android:layout_height="175dp"
                         android:layout_marginTop="10sp"
                         android:padding="5dp"
                         android:src="@mipmap/ic_launcher"
@@ -208,7 +208,7 @@
                         android:textSize="18sp"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/food_item_image" />
+                        app:layout_constraintTop_toBottomOf="@id/글귀_수량" />
 
 
                     <LinearLayout
@@ -219,18 +219,6 @@
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/food_item_name">
 
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="10dp"
-                            android:fontFamily="sans-serif-black"
-                            android:gravity="center"
-                            android:text="￦"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="15sp"/>
-
                         <TextView
                             android:id="@+id/food_item_price"
                             android:layout_width="match_parent"
@@ -239,11 +227,66 @@
                             android:layout_marginBottom="10dp"
                             android:fontFamily="sans-serif-black"
                             android:gravity="center"
-                            android:text="10000"
+                            android:text="10,000"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="15sp"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:fontFamily="sans-serif-black"
+                            android:gravity="center"
+                            android:text="원"
                             android:textColor="@color/colorPrimaryDark"
                             android:textSize="15sp"/>
 
+
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/글귀_수량"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:text="수량 : "
+                        app:layout_constraintTop_toTopOf="@+id/TV_CountItem"
+                        app:layout_constraintEnd_toStartOf="@+id/TV_CountItem"
+                        app:layout_constraintBottom_toBottomOf="@+id/TV_CountItem"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/TV_CountItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:text="1"
+                        app:layout_constraintTop_toTopOf="@+id/BT_amountUp"
+                        app:layout_constraintEnd_toStartOf="@+id/BT_amountUp"
+                        app:layout_constraintBottom_toBottomOf="@+id/BT_amountUp"
+                        />
+
+                    <Button
+                        android:id="@+id/BT_amountUp"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/btn_white"
+                        android:text="+"
+                        app:layout_constraintTop_toTopOf="@+id/BT_amountDown"
+                        app:layout_constraintEnd_toStartOf="@+id/BT_amountDown"
+                        app:layout_constraintBottom_toBottomOf="@+id/BT_amountDown"
+                        />
+
+                    <Button
+                        android:id="@+id/BT_amountDown"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="10dp"
+                        android:text="-"
+                        android:background="@drawable/btn_white"
+                        app:layout_constraintTop_toBottomOf="@id/food_item_image"
+                        app:layout_constraintRight_toRightOf="parent"/>
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
