--- a/app/src/main/res/layout/activity_a_review_writing_page.xml
+++ b/app/src/main/res/layout/activity_a_review_writing_page.xml
@@ -46,26 +46,14 @@
 
 
 
-    <TextView
-        android:id="@+id/원화"
-        android:text="￦"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@id/ET_상품가격입력"
-        app:layout_constraintBottom_toBottomOf="@id/ET_상품가격입력"
-
-        app:layout_constraintHorizontal_bias="0.0"
-        />
 
     <EditText
         android:id="@+id/ET_상품명입력"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="상품명입력"
-        android:layout_marginStart="28dp"
+        android:hint="제목입력"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toTopOf="@+id/ET_상품가격입력"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -76,9 +64,10 @@
         android:id="@+id/ET_상품가격입력"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="100dp"
-        android:hint="상품가격입력"
+        android:hint="내용을 입력해주세요."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/원화"
